--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "lele-vacilos",
+  "homepage": "https://gitname.github.io/lele-vacilos",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@types/node": "20.3.0",
@@ -15,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "gh-pages": "^5.0.0",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
