--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "file-loader": "^6.2.0",
     "gh-pages": "^5.0.0",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "url-loader": "^4.1.1",
+    "use-sound": "^4.0.1"
   }
 }
