--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "url-loader": "^4.1.1",
